--- a/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
+++ b/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
@@ -11,6 +11,9 @@
 	<a href='/get_request_form/'> get_request_action </a>
 </div>
 <div>
+	<a href='/post_request_action/'> post_request_action </a>
+</div>
+<div>
   <a href='/urlparam_pattern/1234567'>
     <xmp>
       re_path('urlparam_pattern/\d+', hello.urlparam_pattern)
