update some files for django

--- a/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
+++ b/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
@@ -52,5 +52,42 @@
     </xmp>
   </a>
 </div>
+<div>
+  <a href='/url_tag_demo01/'> url_tag_demo01 </a>
+</div>
+
+<div>
+  <a href='/url_tag_demo02/11/22'> /url_tag_demo02/11/22 </a>
+</div>
+
+<div>
+  <a href='/url_reverse_fn01/11/22'> /url_reverse_fn01/11/22 </a>
+</div>
+
+<div>
+  <a href='/url_reverse_fn02/11/22'> /url_reverse_fn02/11/22 </a>
+</div>
+
+<div>
+  <a href='/url_reverse_fn03/11/22'> /url_reverse_fn03/11/22 </a>
+</div>
+<div>
+  <a href='/url_reverse_fn04/11/22'> /url_reverse_fn04/11/22 </a>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
