--- a/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
+++ b/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
@@ -75,7 +75,9 @@
   <a href='/url_reverse_fn04/11/22'> /url_reverse_fn04/11/22 </a>
 </div>
 
-
+<div>
+  <a href='/app01/url_dispatcher_demo01/'> /app01/url_dispatcher_demo01/ </a>
+</div>
 
 
 
