add escape html demo for django

--- a/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
+++ b/python3/django/02_django2.2_ubuntu18/web01/templates/index.html
@@ -79,6 +79,11 @@
   <a href='/app01/url_dispatcher_demo01/'> /app01/url_dispatcher_demo01/ </a>
 </div>
 
+<div>
+  <a href='/escape_html_demo/'> /escape_html_demo/ </a>
+</div>
+
+
 
 
 
