--- a/python3/django/03_django_tutorial_learn/django-2.2-wksp01/mysite/polls/templates/polls/index.html
+++ b/python3/django/03_django_tutorial_learn/django-2.2-wksp01/mysite/polls/templates/polls/index.html
@@ -2,7 +2,32 @@
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
+        <!--
+        Bad Practice
         <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        -->
+        <!--
+        https://docs.djangoproject.com/en/2.2/intro/tutorial03/#removing-hardcoded-urls-in-templates
+
+        根据 Django 弱耦合 的设计哲学, 应该 使用 类似 {% url 'detail' question.id %} 的
+        方式实现链接引用而不应采用硬编码的方式直接将 url 嵌入到 template 中.
+
+        The problem with this hardcoded, tightly-coupled approach is that it becomes
+        challenging to change URLs on projects with a lot of templates. However,
+        since you defined the name argument in the path() functions in the polls.urls module,
+        you can remove a reliance on specific URL paths defined in your url
+        configurations by using the {% url %} template tag:
+
+        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+
+        The way this works is by looking up the URL definition as specified in the polls.urls module.
+        You can see exactly where the URL name of ‘detail’ is defined below:
+
+                # the 'name' value as called by the {% url %} template tag
+                path('<int:question_id>/', views.detail, name='detail'),
+        -->
+        <-- Best Practice -->
+        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
