--- a/python3/django/03_django_tutorial_learn/django-2.2-wksp01/mysite/polls/templates/polls/index.html
+++ b/python3/django/03_django_tutorial_learn/django-2.2-wksp01/mysite/polls/templates/polls/index.html
@@ -26,8 +26,17 @@
                 # the 'name' value as called by the {% url %} template tag
                 path('<int:question_id>/', views.detail, name='detail'),
         -->
-        <-- Best Practice -->
+        <!-- 一种改良版本, 注: 这还不是 最佳实践, 最佳实践是 还应该同时采用 命令空间的 url(Namespacing URL names) -->
+        <!--
         <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+        -->
+        <!--
+        Namespacing URL names
+            https://docs.djangoproject.com/en/2.2/intro/tutorial03/#namespacing-url-names
+
+        Best Practice 最佳实践: 结合 url tag 和 application namespace
+        -->
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
